<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Coinz</string>

    <!-- Toolbar actions -->
    <string name="action_settings">Settings</string>
    <string name="action_add_friend">Add friend</string>

    <string name="app_mapbox_pk">pk.eyJ1IjoicWFpc2pwIiwiYSI6ImNqcDczajgxbDB4NzkzcG40Mzh4MTdwZnQifQ.yg2cPfEOnfE3YZZqFRGRlw</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="user_location_permission_explanation">We need your permission to pick up Coinz!</string>
    <string name="user_location_permission_not_granted">This app needs location permissions in order to show its functionality.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Full name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Log out</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_play">Play</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_payments">Payments</string>
    <string name="title_account">Account</string>

    <!-- Account -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <plurals name="in_bank">
        <item quantity="one">In bank. %d coin until spare change.</item>
        <item quantity="other">In bank. %d coins until spare change.</item>
    </plurals>

    <plurals name="in_wallet">
        <item quantity="one">In wallet from %d coin (%d of these shared).</item>
        <item quantity="other">In wallet from %d coins (%d of these shared).</item>
    </plurals>

    <!-- Currencies -->
    <string name="currency_gold">GOLD</string>
    <string name="currency_peny">PENY</string>
    <string name="currency_dolr">DOLR</string>
    <string name="currency_shil">SHIL</string>
    <string name="currency_quid">QUID</string>

    <string name="bank_largest">Bank Largest</string>
    <string name="bank_all">Bank All</string>

    <string name="deposit_25">Deposit up to 25</string>
    <string name="deposit_all">Deposit all</string>

    <!-- Welcome -->
    <string name="skip">Skip</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="profile_picture">Profile picture</string>
    <string name="send_person_money">Send money to %1$s</string>
    <string name="bank25_needed">Bank 25 coins today to enable this feature</string>
    <string name="prompt_add_friends">Add some friends!</string>
    <string name="prompt_select_friend">Pick a friend to send some coins to...</string>
</resources>
