<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_play"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_play" />

    <item
        android:id="@+id/navigation_scoreboard"
        android:icon="@drawable/ic_public_black_24dp"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_payment_black_24dp"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_payments" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
