<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginVertical="@dimen/activity_vertical_margin"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/currency_quid"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="0.000000"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/text_balance_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_balance"
            android:layout_below="@id/text_currency"
            android:layout_centerVertical="false"
            android:text="@string/available_balance" />

        <LinearLayout
            android:layout_below="@id/text_balance_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/bankOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_largest" />

            <Button
                android:id="@+id/bankAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_all" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>